--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,3 +109,18 @@ circle.root:hover {
 #plate.active {
   border-color: red;
 }
+
+/* Modal */
+#basic-modal-content {display:none;}
+
+/* Overlay */
+#simplemodal-overlay {background-color:#000;}
+
+/* Container */
+#simplemodal-container {height: 180px; width:400px; color:#bbb; background-color:#333; border:4px solid #444; padding:12px; font-size: 14px; font-style: light; border-radius: 18px; position: absolute; top: 15px;}
+#simplemodal-container .simplemodal-data {padding:15px;}
+#simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
+#simplemodal-container a {color:#ddd;}
+#simplemodal-container a.modalCloseImg {background:url(../images/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
+#simplemodal-container h3 {color:#7b7562; font-size: 24px;}
+
